--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,7 +7,7 @@
     sample application.
   </h2>
   
-  <%= link_to "Sign Up", signup_path, class: "btn btn-large btn-primary" %>
+  <%= link_to "Регистрация", signup_path, class: "btn btn-large btn-primary" %>
 </div>
   
   
